--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,22 @@
 spring.application.name=AI-Interview-Platform
 
-spring.datasource.url=${DB_URL}
+
+spring.datasource.url=${jdbc:mysql://<host>:3306/<dbname>}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 
+
 server.port=${PORT:8080}
+
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 
+
 jwt.secret=${JWT_SECRET}
 jwt.expiration=3600000
 
+
 assemblyai.api.key=${ASSEMBLYAI_API_KEY}
 assemblyai.base.url=https://api.assemblyai.com
+
