--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=AI-Interview-Platform
 
 
-spring.datasource.url=${jdbc:mysql://<host>:3306/<dbname>}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.datasource.url = jdbc:mysql://localhost:3306/interviewDB 
+spring.datasource.username = root 
+spring.datasource.password = AKash@123
 
 
-server.port=${PORT:8080}
+server.port=8080
 
 
 spring.jpa.hibernate.ddl-auto=update
