--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,17 @@ spring.datasource.password = AKash@123
 server.port=8080
 
 
+
+
+
+
+# Hibernate/JPA configuration for MySQL
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
 jwt.secret=${JWT_SECRET}
