--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,7 @@ spring.datasource.username = root
 spring.datasource.password = AKash@123
 
 
-server.port=8080
-
-
-
+server.port=${PORT:8080}
 
 
 
