changes logs in app.prop

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,39 @@
 spring.application.name=AI-Interview-Platform
 
-
-spring.datasource.url = jdbc:mysql://localhost:3306/interviewDB 
-spring.datasource.username = root 
-spring.datasource.password = AKash@123
-
-
 server.port=${PORT:8080}
 
 
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/interviewDB}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:AKash@123}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Hibernate/JPA configuration for MySQL
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=300000
+
+# Health check endpoint for Render
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+
+# JWT configuration
 jwt.secret=${JWT_SECRET}
 jwt.expiration=3600000
 
-
+# AssemblyAI configuration
 assemblyai.api.key=${ASSEMBLYAI_API_KEY}
 assemblyai.base.url=https://api.assemblyai.com
 
+# Logging configuration (optional - helps with debugging)
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate.SQL=WARN
+logging.level.com.example=DEBUG
